[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "canari"
version = "0.0.3"
description = "Open-source library for probabilistic anomaly detection in time series"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.6"

authors = [
  { name = "Van-Dai Vuong", email = "vuongdai@gmail.com" },
  { name = "Luong-Ha Nguyen", email = "luongha.nguyen@gmail.com" },
  { name = "James-A. Goulet", email = "james.goulet@polymtl.ca" }
]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
