[build-system]
requires = ["setuptools>=75.5.0"]
build-backend = "setuptools.build_meta"

[project]
name = "canari"
version = "0.0.4"
description = "Open-source library for probabilistic anomaly detection in time series"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"

authors = [
  { name = "Van-Dai Vuong, Luong-Ha Nguyen, and James-A. Goulet", email = "vuongdai@gmail.com" }
]

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]


